Issue 22004 wrap

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,7 +35,7 @@ body {
 }
 
 .hero-container {
-  @apply md:pl-10 md:pr-10 md:pt-2 md:pb-1 lg:pl-24 lg:pr-24;
+  @apply md:pl-10 md:pr-10 md:pt-2 md:pb-1 lg:pl-28 lg:pr-24;
   @apply max-w-screen-lg m-auto;
 }
 
